# NOVOMATIC

./: README.md
ZAD1_DorianH/src/: CMakeLists.txt  ZAD1_DorianH.cpp
ZAD2_DorianH/: README.txt
ZAD2_DorianH/src/: CMakeLists.txt  ZAD2_DorianH.cpp
ZAD3_DorianH/: README.txt
ZAD3_DorianH/src/: CMakeLists.txt  ZAD3_DorianH.cpp
